<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.ef.picnic.tabs.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_task"
        android:name="com.ef.picnic.tabs.task.TaskFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_team"
        android:name="com.ef.picnic.tabs.team.TeamFragment"
        android:label="@string/title_team"
        tools:layout="@layout/fragment_team" />
</navigation>